--- a/faculty_innerpage.html
+++ b/faculty_innerpage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Applied Mechanics</title>
+	<title>Applied Mechanics | faculty-inner page</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
