--- a/facultymainpage.html
+++ b/facultymainpage.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-  	<title>Applied Mechanics</title>
+  	<title>Applied Mechanics | faculty-outer page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
