--- a/index.html
+++ b/index.html
@@ -590,38 +590,65 @@
 			<div class="row" style="padding: 20px 0;">
 				<h2 class="abt-deprt"><span class="app-line" style="color: #a00;">|</span> Event Calendar</h2>
 			</div>
-			<div class="row" style="padding: 10px 0px 20px 0px;">
-				<div class="col-md-6">
-					<div id='calendar-container'>
-						<div id='calendar'></div>
-					  </div>
-				</div>
-				<div class="col-md-6">
-					<div class="events-list">
-						<div class="events-img">
-							<img src="images/event-img.png">
-						</div>
-						<div class="events-details">
-							<h4>DC Meeting - Mr Rokom Perme, Roll No: CE16D030, Division: TR,</h4>
-							<ul class="fa-ul">
-								<li><span class="fa-li"><i class="fa fa-clock-o"></i></span>9.00 am</li>
-								<li><span class="fa-li"><i class="fa fa-map-marker"></i></span>New Academic Complex,
-									IIT madras</li>
-							  </ul>
+			<div class="row" style="padding: 5px 0px 20px 0px;">
+				<div class="blog-home2 py-2">
+					<div class="container">
+						<!-- Row  -->
+						<div class="row">
+							<!-- Column -->
+							<div class="col-md-4 on-hover">
+								<div class="card border-0 mb-4">
+									<a href="#"><img class="card-img-top"
+											src="https://firebasestorage.googleapis.com/v0/b/react-projects-83889.appspot.com/o/applied-mec%2Fimage%2Fevent1.png?alt=media&token=6b32d437-3444-4eef-81eb-ad7b75c000c8"
+											alt="wrappixel kit"></a>
+									<div
+										class="date-pos bg-info-gradiant p-2 d-inline-block text-center rounded text-white position-absolute">
+										Oct<span class="d-block">24</span></div>
+									<h5 class="font-weight-medium mt-3"><a href="#"
+											class="text-decoration-none link">You should have eagle’s eye on new trends
+											and techonogies</a></h5>
+									<p class="mt-3">IIT-Madras, Opp. Anna Uiversity, Chennai, TN</p>
+									<a href="#" class="text-decoration-none linking text-themecolor mt-2">Learn More</a>
+								</div>
+							</div>
+							<!-- Column -->
+							<div class="col-md-4 on-hover">
+								<div class="card border-0 mb-4">
+									<a href="#"><img class="card-img-top"
+											src="https://firebasestorage.googleapis.com/v0/b/react-projects-83889.appspot.com/o/applied-mec%2Fimage%2Fevent2.png?alt=media&token=d3dd5520-57db-4eb2-840e-84bf301efbab"
+											alt="wrappixel kit"></a>
+									<div
+										class="date-pos bg-info-gradiant p-2 d-inline-block text-center rounded text-white position-absolute">
+										Oct<span class="d-block">23</span></div>
+									<h5 class="font-weight-medium mt-3"><a href="#"
+											class="text-decoration-none link">New Seminar on Newest Food Recipe from
+											World’s Best</a></h5>
+									<p class="mt-3">IIT-Madras, Opp. Anna Uiversity, Chennai, TN</p>
+									<a href="#" class="text-decoration-none linking text-themecolor mt-2">Learn More</a>
+								</div>
+							</div>
+							<!-- Column -->
+							<div class="col-md-4 on-hover">
+								<div class="card border-0 mb-4">
+									<a href="#"><img class="card-img-top"
+											src="https://firebasestorage.googleapis.com/v0/b/react-projects-83889.appspot.com/o/applied-mec%2Fimage%2Fevent3.png?alt=media&token=c3770806-cda4-4990-b87d-7bfb7512f703"
+											alt="wrappixel kit"></a>
+									<div
+										class="date-pos bg-info-gradiant p-2 d-inline-block text-center rounded text-white position-absolute">
+										Oct<span class="d-block">23</span></div>
+									<h5 class="font-weight-medium mt-3"><a href="#"
+											class="text-decoration-none link">Learn from small things to create
+											something bigger and better.</a></h5>
+									<p class="mt-3">IIT-Madras, Opp. Anna Uiversity, Chennai, TN</p>
+									<a href="#" class="text-decoration-none linking text-themecolor mt-2">Learn More</a>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
+
 			</div>
-			
-			
 		</div>
-		
-		
-
-
-		</div>
-		</div>
-
 	</section>
 	
 
